--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
 <!--<app-contador></app-contador>-->
 <!--<app-listado></app-listado>-->
-<app-contador></app-contador>
+<app-main-page></app-main-page>
